--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+# DATABASE SETTINGS
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+# APPLICATION SETTINGS
+application.security.jwt.secret-key=981273891239812731273917826381256423906503405643
+application.security.jwt.refresh.expiration=604800000
+application.security.jwt.expiration=86400000
